--- a/lang/en.json
+++ b/lang/en.json
@@ -348,23 +348,23 @@
 			"modulePresetsUser_hint": "User-scoped stored module enable/disable presets.",
 			"seenChangelogs_name": "Seen Changelogs",
 			"seenChangelogs_hint": "Internal map of changelogs marked as 'seen'.",
-			"userSettingSync_name": "User Soft Locks",
-			"userSettingSync_hint": "Settings marked for soft lock.",
-			"softLockLedger_name": "BBMM Soft Lock Ledger",
-			"softLockLedger_hint": "Remembers which soft-lock value was last auto-applied per setting id",
+			"userSettingSync_name": "Setting Syncs",
+			"userSettingSync_hint": "List of Setting Syncs (Soft and Hard Locks)",
+			"softLockLedger_name": "BBMM Keybind Soft Lock Ledger",
+			"softLockLedger_hint": "Ledger of keybind soft locks",
 			"softLockRevMap_name": "BBMM Soft Lock Rev Map",
-			"softLockRevMap_hint": "Master list of soft lock values and revisions",
+			"softLockRevMap_hint": "Revision map of soft locked Settings",
 			"userControlSync_name": "BBMM Control Sync Store",
-			"userControlSync_hint": "Master list of controls soft locks",
+			"userControlSync_hint": "List of keybind soft locks",
 			"softLockRevMap_controls_name": "BBMM Control Sync Rev Map",
 			"softLockRevMap_controls_hint": "Remembers which controls soft lock value was last applied",
 			"moduleNotes_name": "BBMM Module Notes",
 			"moduleNotes_hint": "Notes added to modules.",
 			"moduleLocksName": "Locked Modules",
-			"moduleLocksHint": "Modules listed here are locked in BBMM and cannot be enabled or disabled (manually or via bulk actions).",
+			"moduleLocksHint": "List of locked modules",
 			"autoForceReloadName": "Force Player Reload",
 			"autoForceReloadHint": "Force instant reload to players when settings new settings are locked/synced",
-			"importExportHint": "Import/export presets and lists."
+			"importExportHint": "Import/export presets and lists."			
 		},	
 		"macro": {
 			"columnName": "Name",
@@ -476,7 +476,17 @@
 			"compatibility": "Compatibility",
 			"disableDependentsPromptMulti": "Disable the following modules that depend on this one? Uncheck any you want to keep enabled:",
 			"disableOrphansPromptMulti": "These modules are no longer required. Disable them as well? Uncheck any you want to keep enabled:",
-			"filterClear": "Clear filter"
+			"filterClear": "Clear filter",
+			"promptEnableNewModulesName": "Prompt to enable newly installed modules",
+			"promptEnableNewModulesHint": "When enabled, BBMM will detect newly installed modules and ask the GM if they should be enabled.",
+			"newModulesTitle": "New modules detected",
+			"newModulesIntro": "BBMM detected {count} newly installed module(s). Select which ones to enable now.",
+			"newModulesEnableAndReload": "Enable and reload",
+			"newModulesSelectAll": "Select all",
+			"newModulesSelectNone": "Select none",
+			"newModulesDontAskAgain": "Don't ask me again",
+			"newModulesAskLater": "Ask me later",
+			"newModulesNoneSelected": "No modules selected."
 		},
 		"hiddenSettingSync": {
 			"title": "Hidden Client Setting Sync",
@@ -504,7 +514,28 @@
 			"exportKeybindingsNote2": "It will not export world settings, presets, or any other user's keybindings.",
 			"importKeybindings": "Import Keybindings",
 			"importKeybindingsNote": "This will import <b>only</b> into the current user's keybindings and overwrite them.",
-			"importKeybindingsNote2": "Import will OVERWRITE your current keybinding configuration."
+			"importKeybindingsNote2": "Import will OVERWRITE your current keybinding configuration.",
+			"exportTitle": "Export Inclusions",
+			"exportPrompt": "Export inclusions for a single namespace (module/system).",
+			"exported": "Exported '{name}'",
+			"failedExport": "Export failed",
+			"importTitle": "Import Inclusions",
+			"invalidJson": "Invalid JSON",
+			"invalidFormat": "Invalid inclusion file format",
+			"failedImport": "Import failed",
+			"imported": "Imported inclusions for '{target}' ({added} entries)",
+			"newerVersionTitle": "Newer Version Detected",
+			"newerVersionWarn": "The imported file targets '{target}' version {imported}, but you have {local}. You can continue, but settings may not match.",
+			"continue": "Continue",
+			"exportExclusionsTitle": "Export Exclusions",
+			"importExclusionsTitle": "Import Exclusions",
+			"chooseNamespace": "Choose a module/system namespace:",
+			"noNamespaces": "No namespaces available to export.",
+			"exportSuccess": "Exported exclusions for {target}.",
+			"importSuccess": "Imported exclusions for {target}.",
+			"exportFailed": "Export failed.",
+			"importFailed": "Import failed.",
+			"invalidFile": "Invalid exclusions file."
 		}
 	}
 }
