--- a/lang/en.json
+++ b/lang/en.json
@@ -57,12 +57,12 @@
 		"titleDeleteModulePreset": "Delete Module Preset",
 		"promptDeleteModulePreset": "Delete module preset", 
 		"modulePresetsBtn": "Module Presets",
-		"lblOpenModulePresets": "Open Module Preset Manager",
+		"lblOpenModulePresets": "Module Preset Manager",
 		"titleModulePresets": "BBBM Module Presets",
 		"inclusionsMgr": "Inclusions Manager",
 		"settingsPresetMgr": "Settings Preset Manager",
 		"settingsPresetsBtn": "Settings Presets",
-		"lblOpenSettingsPresets": "Open Settings Preset Manager",
+		"lblOpenSettingsPresets": "Settings Preset Manager",
 		"titleSettingsPresets": "BBBM Settings Presets",
 		"promptReload": "Settings preset applied. Reload now to ensure everything initializes correctly",
 		"settingPresetExists": "A settings preset named <b>{name}</b> already exists",
@@ -89,17 +89,18 @@
 		"hint_showChangelogsOnLogin": "If enabled, the GM will be prompted with changelogs for any modules updated since they were last marked seen.",
 		"name_checkDisabledModules": "Changelog Report: Check Disabled Modules",
 		"hint_checkDisabledModules": "When enabled, BBMM will also look for changelogs in installed but disabled modules.",
-		"exclusionsMgr": "Exclusions Manager",
+		"exclusionsMgr": "Inclusions / Exclusions Manager",
 		"exclusions": "Exclusions",
-		"lblExclusionsMgr": "Open Exclusions Manager",
+		"inclusionsExclusions": "Inclusions / Exclusions",
+		"lblExclusionsMgr": "Inclusion / Exclusion Manager",
 		"titleExclusionsMgr": "BBBM Exclusions Manager",
 		"titleAddModuleExclusion": "BBMM — Add Module Exclusion",
 		"addModuleExclusion": "Add Module Exclusion",
 		"allModulesAlreadyExcluded": "All modules are already excluded",
-		"titleAddSettingExclusion": "BBMM — Add Setting Exclusion",
-		"addSettingExclusion": "Add Setting Exclusion",
+		"titleAddSettingExclusion": "BBMM — Add Setting Inclusion / Exclusion",
 		"noEligSettingFound": "No eligible settings found",
-		"titleExclusions": "BBMM - Exclusions",
+		"titleExclusions": "BBMM - Inclusions / Exclusions",
+		"titleInclusions": "BBMM - Inclusions",
 		"removeFromExclusions": "Remove from exclusions",
 		"noExclusionsYet": "No exclusions yet",
 		"confirmRemoveModuleExclusion": "Remove module '{title}' from exclusions",
@@ -156,8 +157,6 @@
 		"name_SetActionShiftRightClick": "Set Action for Shift+Right-Click:", 
 		"controlsMgrBtn": "Controls Manager",
 		"controlsPresetMgr": "Controls Preset Manager",
-		"lblOpenControlsPresets": "Open Controls Preset Manager",
-		"titleControlsPresets": "BBMM Controls Presets",
 		"lockNoneTip": "Lock Player settings",
 		"controlsToggleName": "Enable Control (Keybinding) Sync",
 		"controlsToggleHint": "If enabled, the GM can lock or soft-lock keybindings and push them to connected players.",
@@ -231,6 +230,7 @@
 			"update": "Update",
 			"delete": "Delete",
 			"exclude": "Exclude",
+			"add": "Add",
 			"addModule": "Add Module",
 			"addSetting": "Add Setting",
 			"saveCurrent": "Save Current",
